@@ -769,77 +769,6 @@ amber99_dict = {
       },
    ),
 ],
-'HIE': [
-   (
-      'N<0>([H]<1>)[C@@]<2>([H]<3>)([C@@]<4>([H]<5>)([H]<6>)C<7>=1N<8>=C<9>([H]<10>)N<11>([H]<12>)C<13>=1[H]<14>)C<15>=O<16>',
-      {
-         0: ('N'   , 'N'   ,   -0.4157,    1.8240),
-         1: ('H'   , 'H'   ,    0.2719,    0.6000),
-         2: ('CA'  , 'CT'  ,   -0.0581,    1.9080),
-         3: ('HA'  , 'H1'  ,    0.1360,    1.3870),
-         4: ('CB'  , 'CT'  ,   -0.0074,    1.9080),
-         5: ('HB3' , 'HC'  ,    0.0367,    1.4870),
-         6: ('HB2' , 'HC'  ,    0.0367,    1.4870),
-         7: ('CG'  , 'CC'  ,    0.1868,    1.9080),
-         8: ('ND1' , 'NB'  ,   -0.5432,    1.8240),
-         9: ('CE1' , 'CR'  ,    0.1635,    1.9080),
-        10: ('HE1' , 'H5'  ,    0.1435,    1.3590),
-        11: ('NE2' , 'NA'  ,   -0.2795,    1.8240),
-        12: ('HE2' , 'H'   ,    0.3339,    0.6000),
-        13: ('CD2' , 'CW'  ,   -0.2207,    1.9080),
-        14: ('HD2' , 'H4'  ,    0.1862,    1.4090),
-        15: ('C'   , 'C'   ,    0.5973,    1.9080),
-        16: ('O'   , 'O'   ,   -0.5679,    1.6612),
-      },
-   ),
-   (
-      'C<0>(=O<1>)[C@]<2>([H]<3>)([C@@]<4>([H]<5>)([H]<6>)C<7>=1N<8>=C<9>([H]<10>)N<11>([H]<12>)C<13>=1[H]<14>)[N@+]<15>([H]<16>)([H]<17>)[H]<18>',
-      {
-         0: ('C'   , 'C'   ,    0.6123,    1.9080),
-         1: ('O'   , 'O'   ,   -0.5713,    1.6612),
-         2: ('CA'  , 'CT'  ,    0.0236,    1.9080),
-         3: ('HA'  , 'HP'  ,    0.1380,    1.1000),
-         4: ('CB'  , 'CT'  ,    0.0489,    1.9080),
-         5: ('HB3' , 'HC'  ,    0.0223,    1.4870),
-         6: ('HB2' , 'HC'  ,    0.0223,    1.4870),
-         7: ('CG'  , 'CC'  ,    0.1740,    1.9080),
-         8: ('ND1' , 'NB'  ,   -0.5579,    1.8240),
-         9: ('CE1' , 'CR'  ,    0.1804,    1.9080),
-        10: ('HE1' , 'H5'  ,    0.1397,    1.3590),
-        11: ('NE2' , 'NA'  ,   -0.2781,    1.8240),
-        12: ('HE2' , 'H'   ,    0.3324,    0.6000),
-        13: ('CD2' , 'CW'  ,   -0.2349,    1.9080),
-        14: ('HD2' , 'H4'  ,    0.1963,    1.4090),
-        15: ('N'   , 'N3'  ,    0.1472,    1.8240),
-        16: ('H3'  , 'H'   ,    0.2016,    0.6000),
-        17: ('H2'  , 'H'   ,    0.2016,    0.6000),
-        18: ('H1'  , 'H'   ,    0.2016,    0.6000),
-      },
-   ),
-   (
-      'N<0>([H]<1>)[C@@]<2>([H]<3>)([C@@]<4>([H]<5>)([H]<6>)C<7>=1N<8>=C<9>([H]<10>)N<11>([H]<12>)C<13>=1[H]<14>)C<15>([O-]<16>)=O<17>',
-      {
-         0: ('N'   , 'N'   ,   -0.3821,    1.8240),
-         1: ('H'   , 'H'   ,    0.2681,    0.6000),
-         2: ('CA'  , 'CT'  ,   -0.2699,    1.9080),
-         3: ('HA'  , 'H1'  ,    0.1650,    1.3870),
-         4: ('CB'  , 'CT'  ,   -0.1068,    1.9080),
-         5: ('HB3' , 'HC'  ,    0.0620,    1.4870),
-         6: ('HB2' , 'HC'  ,    0.0620,    1.4870),
-         7: ('CG'  , 'CC'  ,    0.2724,    1.9080),
-         8: ('ND1' , 'NB'  ,   -0.5517,    1.8240),
-         9: ('CE1' , 'CR'  ,    0.1558,    1.9080),
-        10: ('HE1' , 'H5'  ,    0.1448,    1.3590),
-        11: ('NE2' , 'NA'  ,   -0.2670,    1.8240),
-        12: ('HE2' , 'H'   ,    0.3319,    0.6000),
-        13: ('CD2' , 'CW'  ,   -0.2588,    1.9080),
-        14: ('HD2' , 'H4'  ,    0.1957,    1.4090),
-        15: ('C'   , 'C'   ,    0.7916,    1.9080),
-        16: ('OXT' , 'O2'  ,   -0.8065,    1.6612),
-        17: ('O'   , 'O2'  ,   -0.8065,    1.6612),
-      },
-   ),
-],
 'HID': [
    (
       'N<0>([H]<1>)[C@@]<2>([H]<3>)([C@@]<4>([H]<5>)([H]<6>)C<7>=1N<8>([H]<9>)C<10>([H]<11>)=N<12>C<13>=1[H]<14>)C<15>=O<16>',
@@ -1754,3 +1683,19 @@ amber99_dict = {
 ],
 
 }
+
+# also want commong residues like PTyr, PSer, 
+
+# missing neutrals GLUH/GLUN,GLH, ASPH/ASH/ASPN, LYSN, ARGN
+
+for alias in (
+    ( 'HIE', 'HIS'), # default HIS is HISE
+    ( 'HISE', 'HIS'),
+    ( 'HISD', 'HID'),
+    ( 'HISP', 'HIP'),
+    ( 'GLUM', 'GLU'), # default -1
+    ( 'ASPM', 'ASP'), # default -1
+    ( 'LYSP', 'LYS'), # default +1
+    ( 'ARGP', 'ARG'), # default +1
+    ):
+    amber99_dict[alias[0]] = amber99_dict[alias[1]]
