@@ -6,6 +6,11 @@ Changes up to 0.99
 
     beta16
 
+    * fixed valence assignment for HIS and other polymeric residues
+      with various names
+
+    * some fixes and extra residues added to parameter assignment code
+
     * color by explicit 24-bit hex RGB triplets: 0xffffff
 
     * unicode hyphens in selections now converted to ASCII dashes
